# testing_um_template

./: .cruft.json  .dockerignore  .env  .gitattributes  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/lint/: errors.py  lint_clang_format.py  lint_darglint.py  lint_mypy.py  lint_ruff.py  lint_shellcheck.py  main.py  paths.py  run_command.py
.github/workflows/: lint.yaml  test.yaml
docker/: Dockerfile  _shared.sh  exec  launch  reload-ros-nodes  run  test
docker/grafana/: grafana.ini
docker/grafana/dashboard_data/: logs_dashboard.json
docker/grafana/provisioning/dashboards/: all.yaml
docker/promtail/: config.yaml
docker/utils/: README.md
docker/utils/environment/: add-apt-repo  add-workspace  enter-workspaces  install-packages  install-ros-package-from-git  make-pth-file-from-workspace  restore-build-cache  save-build-cache  with-package-list
docs/: about_template.md
launch-profiles/umtemplate_launch_profile/: launcher.py  rviz-config.rviz
launch-profiles/umtemplate_launch_profile/parameters/: parameters.yaml
pkgs/um_test/: README.md  package.xml  pyproject.toml
pkgs/um_test/um_test/: __init__.py  example_urdf.py
pkgs/um_test/um_test/nodes/: __init__.py  um_test_node.py
pkgs/um_test_msgs/: CMakeLists.txt  package.xml
pkgs/um_test_msgs/action/: ExampleAction.action
pkgs/um_test_msgs/msg/: ExampleMessage.msg
pkgs/um_test_msgs/srv/: ExampleService.srv
